--- a/cards/CMakeLists.txt
+++ b/cards/CMakeLists.txt
@@ -3,5 +3,5 @@ project(cards)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES main.c)
+set(SOURCE_FILES shuffle.c)
 add_executable(cards ${SOURCE_FILES})
