ran c version back to the defualt c99 was causing issues.

--- a/sb/makefile
+++ b/sb/makefile
@@ -1,5 +1,4 @@
 CC = gcc
-CFLAGS = -std=c99
 TARGET = sb
 OBJS = sb.o
 $(TARGET): $(OBJS)
@@ -8,7 +7,7 @@ main.o: sb.c
 	$(CC) -c sb.c
 
 debug:
-	gcc sb.c -DDEBUG -o $(TARGET)
+	$(CC)  sb.c -DDEBUG -o $(TARGET)
 
 clean:
 	/bin/rm -f *.o* $(TARGET)
