added debug scripts and  prepped to run on gcc

--- a/sieve/makefile
+++ b/sieve/makefile
@@ -6,6 +6,8 @@ $(TARGET): $(OBJS)
 	$(CC) -o $(TARGET) $(OBJS)
 sieve.o: sieve.c
 	$(CC) -c sieve.c
+debug:
+	$(CC)  sieve.c -DDEBUG -o $(TARGET)
 
 clean:
 	/bin/rm -f *.o $(TARGET)
